# hato

./: Cargo.toml  README.md  justfile
benches/: benchmarks.rs
src/: lib.rs  tests.rs
